fix: progress tracker alignment

--- a/src/index.css
+++ b/src/index.css
@@ -125,17 +125,17 @@ code {
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  gap: 1.8rem;
-  margin-bottom: 2rem;
+  gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 .card-container {
-  width: 20%;
+  width: 23%;
   min-width: 220px;
   max-width: 90vw;
   background-color: #fde0e5;
   border-radius: 8px;
   padding: 8px;
-  box-shadow: 20px 20px 40px rgba(161, 89, 101, 0.25);
+  box-shadow: 2px 2px 4px rgba(161, 89, 101, 0.25);
   display: flex;
   flex-direction: column;
   align-items: center;
